style: fix login form spacing

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -231,7 +231,7 @@ ul {
 
 .login-form h2 {
   margin: 0;
-  padding: 4px;
+  padding: 4px 0;
   font-weight: 200;
 }
 
